# PROJECT-PENNEY

./: .gitignore  README.md  cards_loading_screen.txt  main.py  projectpenney_risgin.py  pyproject.toml  requirements.txt  visualizations.py
cards_ascii/: cards_1.txt  cards_2.txt  cards_3.txt  cards_4.txt  cards_5.txt  cards_6.txt
deck_storage/: my_decks_1.npy
src/: datagen.py  processing.py  requirements.txt  setup.py  testing.py  visualizations.py
